# projet_oust

./: CMakeLists.txt  README.md
cmake/: OustConfig.h.in
include/oust_lib/: plateau.h  print_log.h  stone.h  stone_black.h  stone_white.h
src/oust_lib/: CMakeLists.txt  plateau.cpp  print_log.cpp  stone.cpp  stone_black.cpp  stone_white.cpp
tests/: CMakeLists.txt  test_log_lib.cpp  test_plateau.cpp  test_stone.cpp  test_stone_black.cpp  test_stone_white.cpp
